@@ -59,6 +59,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   file systems that misreport file sizes through stale metadata.
   [This bug was present in "the beginning" but exacerbated in coreutils-8.24]
 
+  tail -f --retry 'missing file' will now process truncations of that file.
+  Previously truncation was ignored thus not outputting new data in the file.
+  [bug introduced in coreutils-5.3.0]
+
   yes now handles short writes, rather than assuming all writes complete.
   [bug introduced in coreutils-8.24]
 
